[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/GUI_Theme_Font_Large.tres" type="Theme" id=1]
[ext_resource path="res://Resources/GUI_Theme.tres" type="Theme" id=2]
[ext_resource path="res://HUD.gd" type="Script" id=3]
[ext_resource path="res://Assets/sprites/crosshair.png" type="Texture" id=4]

[node name="HUD" type="Node2D"]
script = ExtResource( 3 )

[node name="InGame" type="CanvasLayer" parent="."]

[node name="Label_Main" type="Label" parent="InGame"]
margin_left = 804.584
margin_top = 338.257
margin_right = 1107.58
margin_bottom = 389.257
theme = ExtResource( 1 )
text = "THE WINNER IS!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="InGame"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="InGame/CenterContainer"]
margin_left = 889.0
margin_right = 1031.0
margin_bottom = 51.0
theme = ExtResource( 1 )
text = "TIME: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="InGame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Targetter" type="Sprite" parent="InGame/CenterContainer2"]
texture = ExtResource( 4 )
centered = false

[node name="FPSLabel" type="Label" parent="."]
margin_left = 15.119
margin_top = 13.8591
margin_right = 55.119
margin_bottom = 27.8591
theme = ExtResource( 2 )
text = "FPS:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS_Timer" type="Timer" parent="."]

[node name="DebugMode" type="Label" parent="."]
margin_left = 1784.33
margin_top = 41.5518
margin_right = 1878.33
margin_bottom = 55.5518
text = "DEBUG MODE!"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="FPS_Timer" to="." method="_on_Timer_timeout"]
